<resources>
    <string name="app_name">8 wonders</string>
    <string name="great_wall">Great Wall of China</string>
    <string name="petra">Petra</string>
    <string name="christ">Christ the Redeemer</string>
    <string name="machu">Machu Picchu</string>
    <string name="chichen">Chichen Itza</string>
    <string name="colosseum">Colosseum</string>
    <string name="taj">Taj Mahal</string>
    <string name="pyramid">Great Pyramid of Giza</string>
    <string name="great_wall_text">
        The Great Wall of China (Chinese: 萬里長城; pinyin: Wànlǐ Chángchéng, Mongolian: Цагаан хэрэм, Manchu: šanggiyan jase) is the collective name of a series of fortification systems generally built across the historical northern borders of China to protect and consolidate territories of Chinese states and empires against various nomadic groups of the steppe and their polities. Several walls were being built from as early as the 7th century BC by ancient Chinese states;[2] selective stretches were later joined together by Qin Shi Huang (220–206 BC), the first Emperor of China. Little of the Qin wall remains.[3] Later on, many successive dynasties have built and maintained multiple stretches of border walls. The most currently well-known of the walls were built by the Ming dynasty (1368–1644).
Apart from defense, other purposes of the Great Wall have included border controls, allowing the imposition of duties on goods transported along the Silk Road, regulation or encouragement of trade and the control of immigration and emigration. Furthermore, the defensive characteristics of the Great Wall were enhanced by the construction of watch towers, troop barracks, garrison stations, signaling capabilities through the means of smoke or fire, and the fact that the path of the Great Wall also served as a transportation corridor.
The frontier walls built by different dynasties have multiple courses. Collectively, they stretch from Liaodong in the east to Lop Lake in the west, from the present-day Sino–Russian border in the north to Taohe River in the south; along an arc that roughly delineates the edge of Mongolian steppe. A comprehensive archaeological survey, using advanced technologies, has concluded that the walls built by the Ming dynasty measure 8,850 km (5,500 mi).[4] This is made up of 6,259 km (3,889 mi) sections of actual wall, 359 km (223 mi) of trenches and 2,232 km (1,387 mi) of natural defensive barriers such as hills and rivers.[4] Another archaeological survey found that the entire wall with all of its branches measures out to be 21,196 km (13,171 mi).[5] Today, the defensive system of Great Wall is generally recognized as one of the most impressive architectural feats in history.[6]

    </string>
    <string name="petra_text">
        Petra (Arabic: ٱلْبَتْرَاء‎, romanized: Al-Batrāʾ; Ancient Greek: Πέτρα, \"Stone"), originally known to its inhabitants as Raqmu, is a historical and archaeological city in southern Jordan. Petra lies on the slope of Jabal Al-Madbah in a basin among the mountains which form the eastern flank of the Arabah valley that runs from the Dead Sea to the Gulf of Aqaba.[3] Petra is believed to have been settled as early as 9,000 BC, and it was possibly established in the 4th century BC as the capital city of the Nabataean Kingdom. The Nabataeans were nomadic Arabs who invested in Petra's proximity to the trade routes by establishing it as a major regional trading hub.[4]
The trading business gained the Nabataeans considerable revenue and Petra became the focus of their wealth. The earliest historical reference to Petra was an unsuccessful attack on the city ordered by Antigonus I in 312 BC and recorded by various Greek historians. The Nabataeans were, unlike their enemies, accustomed to living in the barren deserts, and were able to repel attacks by taking advantage of the area's mountainous terrain. They were particularly skillful in harvesting rainwater, agriculture and stone carving. Petra flourished in the 1st century AD, when its famous Khazneh structure – believed to be the mausoleum of Nabataean king Aretas IV – was constructed, and its population peaked at an estimated 20,000 inhabitants.[5]
Although the Nabataean kingdom became a client state of the Roman Empire in the first century BC, it was only in 106 AD that it lost its independence. Petra fell to the Romans, who annexed Nabataea and renamed it as Arabia Petraea. Petra's importance declined as sea trade routes emerged, and after an earthquake in 363destroyed many structures. In the Byzantine era several Christian churches were built, but the city continued to decline, and by the early Islamic era it was abandoned except for a handful of nomads. It remained unknown to the world until it was rediscovered in 1812 by Johann Ludwig Burckhardt.[6]
The city is accessed through a 1.2-kilometre-long (0.75 mi) gorge called the Siq, which leads directly to the Khazneh. Famous for its rock-cut architecture and water conduit system, Petra is also called the Rose City due to the color of the stone out of which it is carved.[7] It has been a UNESCO World Heritage Site since 1985. UNESCO has described it as "one of the most precious cultural properties of man's cultural heritage".[8] In 2007, Al-Khazneh was voted as one of the New7Wonders of the World. Petra is a symbol of Jordan, as well as Jordan's most-visited tourist attraction. Tourist numbers peaked at 1 million in 2010; but there followed a slump due to the political instability generated by the Arab Spring affecting countries surrounding Jordan.[9] However, tourist numbers increased subsequently. About 800,000 tourists visited the site in 2018.

    </string>
    <string name="christ_text">
        Christ the Redeemer (Portuguese: Cristo Redentor, standard Brazilian Portuguese: [ˈkɾistu ʁedẽˈtoʁ], local pronunciation: [ˈkɾiɕtŭ̻ xe̞dẽ̞ˈtoɦ]) is an Art Deco statue of Jesus Christ in Rio de Janeiro, Brazil, created by French sculptor Paul Landowski and built by Brazilian engineer Heitor da Silva Costa, in collaboration with French engineer Albert Caquot. Romanian sculptor Gheorghe Leonida fashioned the face. Constructed between 1922 and 1931, the statue is 30 metres (98 ft) high, excluding its 8-metre (26 ft) pedestal. The arms stretch 28 metres (92 ft) wide.[1][2]
The statue weighs 635 metric tons (625 long, 700 short tons), and is located at the peak of the 700-metre (2,300 ft) Corcovado mountain in the Tijuca ForestNational Park overlooking the city of Rio de Janeiro. A symbol of Christianity across the world, the statue has also become a cultural icon of both Rio de Janeiro and Brazil, and is listed as one of the New7Wonders of the World.[3] It is made of reinforced concrete and soapstone.[4][5][6]

    </string>
    <string name="machu_text">
        Machu Picchu (English: /ˈmɑːtʃuː ˈpiːktʃuː/[1][2][3][4][5][6] or /ˈpiːtʃuː/,[3][7][8] Spanish: [ˈmatʃu ˈpi(k)tʃu];[9] Quechua: Machu Pikchu[10] [ˈmatʃʊ ˈpɪktʃʊ]) is a 15th-century Inca citadel, located in the Eastern Cordillera of southern Peru, on a 2,430-metre (7,970 ft) mountain ridge.[11][12] It is located in the Cusco Region, Urubamba Province, Machupicchu District,[13] above the Sacred Valley, which is 80 kilometres (50 mi) northwest of Cuzco and through which the Urubamba River flows, cutting through the Cordillera and creating a canyon with a tropical mountain climate.[14]
Most archaeologists believe that Machu Picchu was constructed as an estate for the Inca emperor Pachacuti (1438–1472). Often mistakenly referred to as the "Lost City of the Incas", it is the most familiar icon of Inca civilization. The Incas built the estate around 1450 but abandoned it a century later at the time of the Spanish conquest. Although known locally, it was not known to the Spanish during the colonial period and remained unknown to the outside world until American historian Hiram Bingham brought it to international attention in 1911.
Machu Picchu was built in the classical Inca style, with polished dry-stone walls. Its three primary structures are the Intihuatana, the Temple of the Sun, and the Room of the Three Windows. Most of the outlying buildings have been reconstructed in order to give tourists a better idea of how they originally appeared.[15] By 1976, 30% of Machu Picchu had been restored[15] and restoration continues.[16]
Machu Picchu was declared a Peruvian Historic Sanctuary in 1981 and a UNESCO World Heritage Site in 1983.[12] In 2007, Machu Picchu was voted one of the New Seven Wonders of the World in a worldwide Internet poll.[17]

    </string>
    <string name="chichen_text">
        Chichen Itza[nb 1] was a large pre-Columbian city built by the Maya people of the Terminal Classic period. The archaeological site is located in Tinúm Municipality, Yucatán State, Mexico.[1]
Chichen Itza was a major focal point in the Northern Maya Lowlands from the Late Classic (c. AD 600–900) through the Terminal Classic (c. AD 800–900) and into the early portion of the Postclassic period (c. AD 900–1200). The site exhibits a multitude of architectural styles, reminiscent of styles seen in central Mexico and of the Puuc and Chenes styles of the Northern Maya lowlands. The presence of central Mexican styles was once thought to have been representative of direct migration or even conquest from central Mexico, but most contemporary interpretations view the presence of these non-Maya styles more as the result of cultural diffusion.
Chichen Itza was one of the largest Maya cities and it was likely to have been one of the mythical great cities, or Tollans, referred to in later Mesoamerican literature.[2] The city may have had the most diverse population in the Maya world, a factor that could have contributed to the variety of architectural styles at the site.[3]
The ruins of Chichen Itza are federal property, and the site's stewardship is maintained by Mexico's Instituto Nacional de Antropología e Historia(National Institute of Anthropology and History). The land under the monuments had been privately owned until 29 March 2010, when it was purchased by the state of Yucatán.[nb 2]
Chichen Itza is one of the most visited archaeological sites in Mexico with over 2.6 million tourists in 2017.[4]

    </string>
</resources>